--- a/class10.html
+++ b/class10.html
@@ -52,6 +52,27 @@
       border: 1px solid #ccc;
       border-radius: 5px;
     }
+    li a {
+  display: block;
+  padding: 15px;
+  border-radius: 10px;
+  background: #ffffff;
+  text-decoration: none;
+  color: #222;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  transition: all 0.2s ease-in-out;
+}
+
+li a:hover {
+  background: #f8f9fa;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+}
+
+li strong {
+  color: #0066cc;
+}
+
   </style>
 </head>
 <body>
@@ -77,24 +98,24 @@
 
       <h3>🏛️ Central Level Exams (All India)</h3>
       <ul class="job-summary" id="examList">
-        <li><strong><a href="exam-template.html?id=ssc-mts">1. SSC MTS & Havaldar</a></strong><br>➡️ Office helper jobs & Havaldar posts in central govt departments.<br>✅ Class 10 pass<br>🌍 All India<br>💰 ₹23,000–₹25,000/month</li>
-        <li><strong><a href="exam-template.html?id=ssc-gd">2. SSC GD Constable</a></strong><br>➡️ Join BSF, CRPF, CISF, ITBP, SSB, or SSF.<br>✅ Class 10 pass<br>💪 Physical test needed<br>💰 ₹30,000–₹32,000/month</li>
-        <li><strong><a href="exam-template.html?id=rrb-group-d">3. RRB Group D</a></strong><br>➡️ Railway jobs like helper, track maintainer, porter.<br>✅ Class 10 pass<br>🚆 Railway lovers<br>💰 ₹22,000–₹25,000/month</li>
-        <li><strong><a href="exam-template.html?id=gds">4. Indian Post GDS</a></strong><br>➡️ Post office jobs in villages/towns.<br>✅ Class 10 pass with good marks in Maths & English<br>📬 No exam<br>💰 ₹10,000–₹14,500/month</li>
-        <li><strong><a href="exam-template.html?id=army-agniveer">5. Army Agniveer</a></strong><br>➡️ Soldier GD & Tradesman roles.<br>✅ Class 10 pass<br>📋 Physical + written test<br>💰 ₹30,000–₹40,000/month</li>
-        <li><strong><a href="exam-template.html?id=navy-agniveer">6. Navy Agniveer (MR)</a></strong><br>➡️ Matric Recruit posts like cook, steward.<br>✅ Class 10 pass<br>🚢 Physical + written test<br>💰 ₹30,000–₹40,000/month</li>
-        <li><strong><a href="exam-template.html?id=airforce-agniveer">7. Air Force Agniveer Vayu</a></strong><br>➡️ Trades/support roles.<br>✅ Class 10 pass<br>✈️ Physical + written test<br>💰 ₹30,000–₹40,000/month</li>
+        <li><a href="exam-template.html?id=ssc-mts">1. SSC MTS & Havaldar</strong><br>➡️ Office helper jobs & Havaldar posts in central govt departments.<br>✅ Class 10 pass<br>🌍 All India<br>💰 ₹23,000–₹25,000/month</a></li>
+        <li><a href="exam-template.html?id=ssc-gd">2. SSC GD Constable</strong><br>➡️ Join BSF, CRPF, CISF, ITBP, SSB, or SSF.<br>✅ Class 10 pass<br>💪 Physical test needed<br>💰 ₹30,000–₹32,000/month</a></li>
+        <li><a href="exam-template.html?id=rrb-group-d">3. RRB Group D</strong><br>➡️ Railway jobs like helper, track maintainer, porter.<br>✅ Class 10 pass<br>🚆 Railway lovers<br>💰 ₹22,000–₹25,000/month</a></li>
+        <li><a href="exam-template.html?id=gds">4. Indian Post GDS</strong><br>➡️ Post office jobs in villages/towns.<br>✅ Class 10 pass with good marks in Maths & English<br>📬 No exam<br>💰 ₹10,000–₹14,500/month</a></li>
+        <li><a href="exam-template.html?id=army-agniveer">5. Army Agniveer</strong><br>➡️ Soldier GD & Tradesman roles.<br>✅ Class 10 pass<br>📋 Physical + written test<br>💰 ₹30,000–₹40,000/month</a></li>
+        <li><a href="exam-template.html?id=navy-agniveer">6. Navy Agniveer (MR)</strong><br>➡️ Matric Recruit posts like cook, steward.<br>✅ Class 10 pass<br>🚢 Physical + written test<br>💰 ₹30,000–₹40,000/month</a></li>
+        <li><a href="exam-template.html?id=airforce-agniveer">7. Air Force Agniveer Vayu</strong><br>➡️ Trades/support roles.<br>✅ Class 10 pass<br>✈️ Physical + written test<br>💰 ₹30,000–₹40,000/month</a></li>
       </ul>
 
       <br>
 
       <h3>🌾 Assam State Level Exams</h3>
       <ul class="job-summary">
-        <li><strong><a href="exam-template.html?id=assam-dr">8. Assam Direct Recruitment – Grade IV</a></strong><br>➡️ Peon, Chowkidar, Driver, etc.<br>✅ Class 8/10 pass<br>🏢 No special skill<br>💰 ₹17,000–₹20,000/month</li>
-        <li><strong><a href="exam-template.html?id=assam-police">9. Assam Police Grade IV</a></strong><br>➡️ Peon, Chowkidar, Driver.<br>✅ Class 10 pass<br>🚓 Physical + written test<br>💰 ₹18,000–₹21,000/month</li>
-        <li><strong><a href="exam-template.html?id=assam-forest">10. Assam Forest Guard / AFPF Constable</a></strong><br>➡️ Protect forests/wildlife.<br>✅ Class 10 pass<br>🌲 Physical + written test<br>💰 ₹22,000–₹25,000/month</li>
-        <li><strong><a href="exam-template.html?id=excise-constable">11. Excise Constable</a></strong><br>➡️ Excise Dept jobs.<br>✅ Class 10 pass<br>🔍 Written + Physical test<br>💰 ₹22,000–₹25,000/month</li>
-        <li><strong><a href="exam-template.html?id=home-guard">12. Home Guard Volunteer</a></strong><br>➡️ Assist police.<br>✅ Class 10 pass<br>🎽 Physical fitness test<br>💰 ₹9,000–₹11,000/month</li>
+        <li><a href="exam-template.html?id=assam-dr">8. Assam Direct Recruitment – Grade IV</strong><br>➡️ Peon, Chowkidar, Driver, etc.<br>✅ Class 8/10 pass<br>🏢 No special skill<br>💰 ₹17,000–₹20,000/month</a></li>
+        <li><a href="exam-template.html?id=assam-police">9. Assam Police Grade IV</strong><br>➡️ Peon, Chowkidar, Driver.<br>✅ Class 10 pass<br>🚓 Physical + written test<br>💰 ₹18,000–₹21,000/month</a></li>
+        <li><a href="exam-template.html?id=assam-forest">10. Assam Forest Guard / AFPF Constable</strong><br>➡️ Protect forests/wildlife.<br>✅ Class 10 pass<br>🌲 Physical + written test<br>💰 ₹22,000–₹25,000/month</a></li>
+        <li><a href="exam-template.html?id=excise-constable">11. Excise Constable</strong><br>➡️ Excise Dept jobs.<br>✅ Class 10 pass<br>🔍 Written + Physical test<br>💰 ₹22,000–₹25,000/month</a></li>
+        <li><a href="exam-template.html?id=home-guard">12. Home Guard Volunteer</strong><br>➡️ Assist police.<br>✅ Class 10 pass<br>🎽 Physical fitness test<br>💰 ₹9,000–₹11,000/month</a></li>
       </ul>
 
       <br>
@@ -162,3 +183,4 @@
 
 </body>
 </html>
+
